objects/UserSetting__c.object
<CustomObject>
    <fields>
        <fullName>Addressee2__c</fullName>
        <label>宛名2</label>
        <picklist>
            <picklistValues>
                <fullName>御中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>様</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>殿</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>宛名1</label>
        <picklist>
            <picklistValues>
                <fullName>御中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>様</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>殿</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BranchTelephoneFaxExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>支店連絡先出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalendarExpress__c</fullName>
        <description>和暦、西暦の表示選択</description>
        <label>暦表示</label>
        <picklist>
            <picklistValues>
                <fullName>和暦</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>西暦</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerExpress__c</fullName>
        <label>客先表示</label>
        <picklist>
            <picklistValues>
                <fullName>契約先</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>納入先</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefaultRowsHeading__c</fullName>
        <label>見出し</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultRowsItems__c</fullName>
        <label>項目</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultRowsSubItems__c</fullName>
        <label>段下げ項目</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepartmentOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <description>部署名表示非表示設定</description>
        <label>出力部署</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisplayDecimal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, displays insignificant decimal values, for example: 1.0
If Un-checked, removes insignificant decimal values, for example: 1</description>
        <inlineHelpText>If Checked, displays insignificant decimal values, for example: 1.0
If Un-checked, removes insignificant decimal values, for example: 1</inlineHelpText>
        <label>明細数量の整数表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentCode__c</fullName>
        <label>部署コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentName__c</fullName>
        <label>部署名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentOutputText__c</fullName>
        <label>出力部署テキスト</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>単価出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductCodeExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>品目No表示非表示切り替え</description>
        <label>品目No.出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductDivision__c</fullName>
        <label>品目区分</label>
        <picklist>
            <picklistValues>
                <fullName>製品</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>パーツ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuotationNameExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>見積名称出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>問い合わせ先出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepresentativeNameExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>代表者名出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitbodyExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>本体号機出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Word1__c</fullName>
        <label>文言1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word2__c</fullName>
        <label>文言2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word3__c</fullName>
        <label>文言3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WordSave1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>文言1保存</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WordSave2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>文言2保存</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WordSave3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>文言3保存</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WordSettingDefaultDisplay1__c</fullName>
        <label>文言設定デフォルト表示1</label>
        <picklist>
            <picklistValues>
                <fullName>表示</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WordSettingDefaultDisplay2__c</fullName>
        <label>文言設定デフォルト表示2</label>
        <picklist>
            <picklistValues>
                <fullName>表示</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WordSettingDefaultDisplay3__c</fullName>
        <label>文言設定デフォルト表示3</label>
        <picklist>
            <picklistValues>
                <fullName>表示</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>非表示</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>個人設定</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>個人設定名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>